# sgl-mindspore

./: .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
sgl_mindspore/: __init__.py  utils.py
sgl_mindspore/layers/: __init__.py  activation.py  attention.py  linear.py  norm.py  rope.py  vocab_embedding.py
sgl_mindspore/layers/moe/: __init__.py  fused_moe.py
sgl_mindspore/layers/quantization/: base_config.py  unquant.py  w8a8_int8.py
sgl_mindspore/models/: deepseekv3.py  llama.py  llama_eagle3.py  mindspore_model_base.py  qwen3.py  qwen3_5.py  qwen3_5_vl.py  qwen3_moe.py  qwen3_vl.py
tests/: __init__.py  test_qwen3_30b.py  test_qwen3_32b.py  test_qwen3_8b.py  test_qwen3_8b_eagle3.py  test_utils.py
