[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgl-mindspore"
version = "0.0.1"
description = "A Python package for SGLang with MindSpore"
readme = "README.md"
authors = [
  { name = "chz34", email = "c-34@qq.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here
    # "mindspore>=1.8.0",
    "sglang",
]
